Bug 829191 - Reset mEventDeliveryPaused before calling DispatchPendingMediaEvents.  r=roc