content/html/content/src/nsHTMLMediaElement.cpp
@@ -2320,8 +2320,8 @@ nsresult nsHTMLMediaElement::FinishDecoderSetup(MediaDecoder* aDecoder,
 
   // The new stream has not been suspended by us.
   mPausedForInactiveDocumentOrChannel = false;
-  mPendingEvents.Clear();
   mEventDeliveryPaused = false;
+  mPendingEvents.Clear();
 
   aDecoder->SetAudioChannelType(mAudioChannelType);
   aDecoder->SetAudioCaptured(mAudioCaptured);
@@ -3113,8 +3113,8 @@ void nsHTMLMediaElement::SuspendOrResumeElement(bool aPauseElement, bool aSuspen
         GetSrcMediaStream()->ChangeExplicitBlockerCount(-1);
       }
       if (mEventDeliveryPaused) {
-        DispatchPendingMediaEvents();
         mEventDeliveryPaused = false;
+        DispatchPendingMediaEvents();
       }
     }
   }
